Update JSON Web Token
Update JSON Web Token description.

--- a/code/API_definitions/CAMARA_numberVerify.yaml
+++ b/code/API_definitions/CAMARA_numberVerify.yaml
@@ -89,6 +89,8 @@ externalDocs:
 security:
   - oAuth2:
       - 'authorize:read'
+  - bearerAuth:
+      - 'userinfo:read'
 
 servers:
   - url: https://api.timbrasil.com.br
@@ -492,4 +494,7 @@ components:
           tokenUrl: 'https://example.com/oauth/token'
           scopes:
             'authorize:read': Grant read-only authorize data
-
+    bearerAuth: 
+      type: http
+      scheme: bearer
+      bearerFormat: JWT   
